--- a/src/i18n/lang/ka/landing.json
+++ b/src/i18n/lang/ka/landing.json
@@ -4,54 +4,54 @@
   "logout": "გასვლა",
   "get_started": "დაწყება",
   "go_back": "უკან",
-  "movie_quotes": "MOVIE QUOTES",
-  "you_have_to_leave_somethig_behind_to_go_forward": "You have to leave somethig behind to go forward",
-  "i_think_were_just_gonna_have_to_be_secretly_in_love": "I think were just gonna have to be secretly in love with earch other and leave it that",
-  "i_see_in_your_eyes_the_same_fear": "I see in your eyes the same fear that would take the heart of me....",
-  "interstellar": "Interstellar",
-  "the_royal_tenenbaums ": "The Royal Tenenbaums",
-  "the_lord_of_the_rings": "The Lord of the Rings",
-  "movie_quotes_all_rights_reserved": "MOVIE QUOTES. ALL RIGHTS RESERVED.",
+  "movie_quotes": "ფილმის ციტატები",
+  "you_have_to_leave_somethig_behind_to_go_forward": "წინ რომ წახვიდე, რაღაცის დატოვება მოგიწევს",
+  "i_think_were_just_gonna_have_to_be_secretly_in_love": "ვფიქრობ ჩვენ ჩუმად უნდა ვიყოთ შეყვარებული და ასე უნდა იყოს",
+  "i_see_in_your_eyes_the_same_fear": "იგივე შიშვს ვხედავ შენში, რომელსაც ჩემი გული ვერ გაუძლებდა....",
+  "interstellar": "ინტერსტელარი",
+  "the_royal_tenenbaums ": "ტენენბაუმების ოჯახი",
+  "the_lord_of_the_rings": "ბეჭდების მბრძნებელი",
+  "movie_quotes_all_rights_reserved": "ფილმების ციტატები. ყველა უფლება დაცულია.",
   "find_any_quote_in_millions_of_movie_lines": "იპოვე ნებისმიერი ციტატა მილიონობით ფილმიდან",
 
-  "create_an_account": "Create an account",
-  "username": "Username",
-  "email": "Email",
-  "password": "Password",
-  "password_confirm": "Password Confirm",
-  "sign_up_with_google": "Sign up with Google",
-  "already_have_an_account": "Already have an account",
-  "login": "Login",
-  "start_your_journey": "Start Your journey",
+  "create_an_account": "შექმენი ექაუნთი",
+  "username": "სახელი",
+  "email": "ელ-ფოსტა",
+  "password": "პაროლი",
+  "password_confirm": "დაადასტურე პაროლი",
+  "sign_up_with_google": "დარეგისტრირდით გუგლის ანგარიშით",
+  "already_have_an_account": "უკვე გაქვთ ექაუნთი",
+  "login": "ავტორიზაცია",
+  "start_your_journey": "დაიწყეთ შენი მოგზაურობა",
 
-  "log_in_to_your_account": "Log in to your account",
-  "welcome_back_please_eneter_your_details": "Welcome back! Please eneter your details!",
-  "remember_me": "Remember me",
-  "forgot_password": "Forgot password",
-  "sign_in": "Sign in",
-  "sign_in_with_google": "Sign in with Google",
-  "do_not_have_an_account": "Do not have an account?",
-  "signup": "SignUp",
+  "log_in_to_your_account": "შედით თქვენს ექაუნთზე",
+  "welcome_back_please_eneter_your_details": "მოგესალმებით! გთხოვთ შეავსოთ მონაცემები!",
+  "remember_me": "დამახსოვრება",
+  "forgot_password": "დამავიწყდა პაროლი",
+  "sign_in": "ავტორიზაცია",
+  "sign_in_with_google": "ავტორიზაცია გუგლის ანგარიშით",
+  "do_not_have_an_account": "უკვე გააქვთ ექაუნთი?",
+  "signup": "რეგისტრაცია",
 
-  "create_new_password": "Create new password",
-  "your_new_password_must_be_different": "Your new password must be different from previous used passwords!",
-  "back_to_log_in": "Back to log in",
-  "reset_password": "Reset password",
+  "create_new_password": "შექმენი ახალი პაროლი",
+  "your_new_password_must_be_different": "შენი ახალი პაროლი განსხვავებული უნდა იყოს ძველისგან!",
+  "back_to_log_in": "დაბრუნდით ავტორიზაციის გვერდზე",
+  "reset_password": "პაროლის აღდგენა",
 
-  "Enter_the_email_and_we": "Enter the email and we'll send an email with instructions to reset your password",
-  "send_instructions": "Send instructions",
+  "Enter_the_email_and_we": "შეიყვანეთ ელ-ფოსტა და ჩვენ გამოგიგზავნით პაროლის აღდგენის ინსტრუქციას",
+  "send_instructions": "ინსტრუქციის გაგზავნა",
 
-  "thank_you": "Thank you!",
-  "please_check_your_email": "Please check your email and follow the instructions to activate your account.",
-  "go_to_my_email": "Go to my email",
+  "thank_you": "მადლობა!",
+  "please_check_your_email": "გთხოვთ შეამოწმოთ თქვენი ელ-ფოსტა და მიყევით ინსტრუქციებს ელ-ფოსტის აქტივაციისთვის.",
+  "go_to_my_email": "ჩემს მეილზე გადასვლა",
 
-  "success": "Success!",
-  "your_password_changed_successfully": "Your password changed successfully",
-  "go_to_my_news_feed": "Go to my news feed",
+  "success": "წარმატება!",
+  "your_password_changed_successfully": "თქვენი პაროლი წარმატებით შეიცვალა",
+  "go_to_my_news_feed": "ჩემს ახალი ამბებზე გადასვლა",
 
-  "check_your_email": "Check your email",
-  "we_have_sent_a_password_recover_instructions": "We have sent a password recover instructions to your email ",
-  "skip_confirm_later": "Skip, I'll confirm later ",
+  "check_your_email": "შეამოწმეთ ელ-ფოსტა",
+  "we_have_sent_a_password_recover_instructions": "ჩვენ გამოგიგზავნეთ პაროლის აღდგენის ინსტრუქციები ელ-ფოსტაზე",
+  "skip_confirm_later": "გამოტოვება, სხვა დროს დავადასტურებ",
 
-  "your_account_has_been_activated": "Your account has been activated."
+  "your_account_has_been_activated": "თქვენი ანგარიში გააქტიურდა."
 }
