--- a/src/i18n/lang/ka/newsfeed.json
+++ b/src/i18n/lang/ka/newsfeed.json
@@ -1,21 +1,23 @@
 {
-  "news_feed": "News feed",
-  "list_of_movies": "List of movies",
-  "edit_your_profile": "Edit your profile",
+  "news_feed": "ახალი ამბები",
+  "list_of_movies": "დამატებული ფილმები",
+  "edit_your_profile": "შეცვალე შენი მონაცემები",
 
-  "write_new_quote": "Write new quote",
-  "enter_to_search_movies": "Enter @ to search movies, Enter # to search quotes",
-  "write_a_comment": "Write a comment",
-  "no_results_found": "No results found!",
+  "write_new_quote": "შექმენი ახალი ციტატა",
+  "enter": "შეიყვანეთ",
+  "to_search_movies": "რომ მოძებნოთ ფილმებით",
+  "to_search_quotes": "რომ მოძებნოთ ციტატები",
+  "write_a_comment": "დაწერეთ კომენტარი",
+  "no_results_found": "შედეგი არ მოიძებნა!",
 
-  "commented_to_your_movie_quote": "Commented to your movie quote",
-  "reacted_to_your_quote": "Reacted to your quote",
+  "commented_to_your_movie_quote": "დააკომენტარა თქვენს ციტატაზე",
+  "reacted_to_your_quote": "რეაქცია გამოხატა თქვენს ციტატაზე",
 
-  "day_ago": "day ago",
-  "min_ago": "min ago",
+  "day_ago": "დღის წინ",
+  "min_ago": "წუთის წინ",
 
-  "choose_file": "Choose file",
-  "drag_or_drop_your_image_here_or": "Drag & drop your image here or",
-  "post": "Post",
-  "choose_movie": "Choose movie"
+  "choose_file": "აირჩიე ფაილი",
+  "drag_or_drop_your_image_here_or": "თქვენი სურათი აქ ჩააგდეთ ან",
+  "post": "დაპოსტვა",
+  "choose_movie": "აირჩიეთ ფილმი"
 }
