feat: add translation

--- a/src/i18n/lang/en/moviedescription.json
+++ b/src/i18n/lang/en/moviedescription.json
@@ -5,6 +5,7 @@
   "add_quote": "Add quote",
 
   "edit_movie": "Edit movie",
+  "edit_quote": "Edit quote",
 
   "change_photo": "change photo",
   "save_changes": "Save changes",
