--- a/src/i18n/lang/ka/moviedescription.json
+++ b/src/i18n/lang/ka/moviedescription.json
@@ -5,6 +5,7 @@
   "add_quote": "ციტატის დამატება",
 
   "edit_movie": "ფილმის შეცვლა",
+  "edit_quote": "ციტატის შეცვლა",
 
   "change_photo": "სურათის შეცვლა",
   "save_changes": "ცვლილებების შენახვა",
