feat: add error translate messages, fix navigation current select field, and add drag and drop

--- a/src/i18n/lang/en/movielist.json
+++ b/src/i18n/lang/en/movielist.json
@@ -6,6 +6,7 @@
   "add_movie": "Add movie",
 
   "genre": "Genre",
+  "genre_field_is_required": "Genre field is required",
   "year": "Year",
   "budget": "Budget",
   "director": "Director"
