--- a/src/i18n/lang/ka/texts.json
+++ b/src/i18n/lang/ka/texts.json
@@ -5,6 +5,9 @@
   "enter_new_email": "შეიყვანეთ ახალი ელ-ფოსტა",
   "password": "პაროლი",
   "confirm_password": "პაროლის დადასტურება",
-  "at_least_3": "მინიმუმ 3 და მაქსიმუმ 15 პატარა სიმბოლოებით",
-  "at_least_8": "მინიმუმ 8 და მაქსიმუმ 15 პატარა სიმბოლოებით"
+  "notifications": "შეტყობინებები",
+  "mark_as_all_read": "მონიშნე ყველა წაკითხულად",
+  "commented_to_your_movie_quotes": "დააკომენტარა თქვენი ფილმის ციტატებზე",
+  "reacted_to_your_quote": "გამოხატა რეაქცია თქვენს ციტატებზე",
+  "new": "ახალი"
 }
