fix: static language and rules

--- a/src/i18n/lang/ka/texts.json
+++ b/src/i18n/lang/ka/texts.json
@@ -5,6 +5,8 @@
   "enter_new_email": "შეიყვანეთ ახალი ელ-ფოსტა",
   "password": "პაროლი",
   "confirm_password": "პაროლის დადასტურება",
+  "at_least_3": "მინ 3 & მაქს.15 პატარა სიმბოლოები",
+  "at_least_8": "მინ 8 & მაქს.15 პატარა სიმბოლოები",
   "notifications": "შეტყობინებები",
   "mark_as_all_read": "მონიშნე ყველა წაკითხულად",
   "commented_to_your_movie_quotes": "დააკომენტარა თქვენი ფილმის ციტატებზე",
